# ShrimpTech

./: CMakeLists.txt  MODBUS_ERROR_DIAGNOSIS.md  README.md  batchflashdev.sh  cmds.md  partitions.csv  sdkconfig  sdkconfig.old  wizard.json
Documentation/: Mongoose Server.md  Mqtt Stuff  runtime-event-flow.mmd  scheduleMgr Doc.md  shrimp-config-2026-01-14.json
Documentation/MqttCmds/: shrimp-config-2026-04-22.json  shrimp-config-2026-04-28.json
Documentation/Other/: README.md  flow.md  monMinConfig.cpp  shrimpMsg_t_offsets_expanded.txt
Documentation/Profiles/: blowerProfile.json  feederProfile.json  shortFeedprofile.json  shortprofile.json  shortprofileTarde.json  shortprofilejson
Documentation/Profiles/Blower/: Blower2026.json  feeder-profiles.json  shortprofileTarde.json
Documentation/Profiles/Feeder/: Feed2026.json  dayFeederProfile.json  feedShortDay.json  newFeederProfile.json  shortFeedprofile.json
main/: CMakeLists.txt  idf_component.yml
main/Documentation/: Mongoose Server.md  Mqtt Stuff
main/cert/: cert.pem
main/inc/: BlowerClass.h  FramI2C.h  Pump.hpp  Valve.hpp  crypto_utils.h  defines.h  display_utils.h  feederScheduler.h  forwards.h  globals.h  includes.h  led_utils.h  mesh_netif.h  misparams.h  modbus_task_utils.h  nmea_parser.h  time_utils.h  typedef.h
main/inc/hal/: hal-SCH-ShrimpPcb.h  hal-Sch-Shrimpo-Feeder-TVL.h  hal-Shrimp-602-2L-1MB-TVL-V2.h
main/kbd/: cmdApp.cpp  cmdBaseTimer.cpp  cmdBlow.cpp  cmdConfig.cpp  cmdDebug.cpp  cmdErase.cpp  cmdFindUnit.cpp  cmdFram.cpp  cmdLog.cpp  cmdLogLevel.cpp  cmdMeter.cpp  cmdMetersreset.cpp  cmdNode.cpp  cmdResetConf.cpp  cmdSecurity.cpp  cmdenDecrypt.cpp
main/src/: BlowerClass.cpp  FramI2C.cpp  Program Flow.md  batteryTask.cpp  displayManager.cpp  energyTask.cpp  kbd.cpp  lcd.cpp  logmanager.cpp  mesh_netif.c  meter.cpp  modbus_task_utils.cpp  newrs485.cpp  nimble.cpp  panelsTask.cpp  profile.json  rs485.cpp  rs485old.cpp  sendData.cpp  sensorTask.cpp  utils.cpp  webserver.cpp
main/src/Definitions/: dayprofile-min.json  dayprofile.json  profile copy-min.json  profile copy.json  profileshort-min.json  profileshort.json
main/src/ble/: nimble.cpp
main/src/cmd/: cmdDisplay.cpp  cmdEraseMetrics.cpp  cmdFormat.cpp  cmdLock.cpp  cmdLogs.cpp  cmdMQTT.cpp  cmdNetw.cpp  cmdProd.cpp  cmdReset.cpp  cmdSendMetrics.cpp  cmdUpdate.cpp
main/src/cmdMqtt/: cmdBattery.cpp  cmdDOEX.cpp  cmdDisplay.cpp  cmdEraseMetrics.cpp  cmdEraseRec.cpp  cmdFeedProd.cpp  cmdFeedProfile.cpp  cmdFeedVFDCmd.cpp  cmdFeedVFDMon.cpp  cmdFormat.cpp  cmdInvertStatus.cpp  cmdInverter.cpp  cmdLimits.cpp  cmdLock.cpp  cmdLogs.cpp  cmdMQTT.cpp  cmdNetw.cpp  cmdPID.cpp  cmdPanels.cpp  cmdProd.cpp  cmdProfile.cpp  cmdReadLimits.cpp  cmdReset.cpp  cmdSendMetrics.cpp  cmdSensors.cpp  cmdUpdate.cpp  cmdVFDCmd.cpp  cmdVFDMon.cpp
main/src/depracated/: utils.cpp
main/src/kbd/: cmdApp.cpp  cmdBaseTimer.cpp  cmdBlow.cpp  cmdBlowerTimers.cpp  cmdConfig.cpp  cmdDebug.cpp  cmdErase.cpp  cmdFeedTimers.cpp  cmdFram.cpp  cmdLog.cpp  cmdMetersreset.cpp  cmdSecurity.cpp  cmdTasks.cpp  cmdTimers.cpp  cmdenDecrypt.cpp
main/src/main/: main.c
main/src/modbusDevs/: Modbus general logic.md  batteryTask.cpp  desc4build.cpp  energyTask.cpp  genericSensor.cpp  panelsTask.cpp  printSensors.cpp  rs485.cpp  rs485direct.cpp  sensorTask.cpp
main/src/mongoose/: mongoose.c  mongoose.h  mongoose_config.h  mongoose_fs.c  mongoose_glue.c  mongoose_glue.h  mongoose_impl.c  mongoose_wizard.json
main/src/shrimp/: BlowerClass.cpp  FramI2C.cpp  I (9281) Shrimp: SNTP Date Sun Feb 1 23:.md.md  Pump.cpp  Valve.cpp  crypto_utils.cpp  displayManager.cpp  feederScheduler.cpp  getGpsTime.cpp  kbd.cpp  led_utils.cpp  logmanager.cpp  nmea_parser.cpp  sendData.cpp  shrimpmgr.cpp  time_utils.cpp  webserver.cpp
main/src/utilities/: led_utils.cpp  time_utils.cpp
main/web/: index-min.html  index.html
